--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.88",
     "@types/react": "^18.2.65",
+    "@types/react-bootstrap": "^0.32.36",
     "@types/react-dom": "^18.2.21",
+    "@types/react-router-dom": "^5.3.3",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
