--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-bootstrap": "^0.32.36",
     "@types/react-dom": "^18.2.21",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.5.0",
     "http-proxy-middleware": "^2.0.6",
