--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "bootstrap": "^5.3.3",
     "date-fns": "^3.5.0",
     "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.30.1",
     "qs": "^6.12.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-calendar": "^4.8.0",
     "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
