--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-bootstrap": "^0.32.36",
     "@types/react-dom": "^18.2.21",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-persist": "^4.3.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.5.0",
@@ -29,6 +30,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
