--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-calendar": "^4.8.0",
+    "react-cookie": "^7.2.1",
+    "react-cookies": "^0.1.1",
     "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
